--- a/pages/estilos.css
+++ b/pages/estilos.css
@@ -1,8 +1,8 @@
 :root {
   --color_primario: #80461B;
-  --color_primario_suave: #B7410E;
+  --color_primario_suave: rgba(183, 65, 14, 0.5);
   --color_negro: black;
-  --altura_header: 150px;
+  --altura_header: 13em;
   --padding_left_right: 1.2rem;
   --ancho_maximo: 1200px;
 }
@@ -23,26 +23,25 @@ a {
 
 ol, ul {
   list-style: none;
-  font-size: 8px;
+  font-size: 0.8em;
 }
 
 .header {
   height: var(--altura_header);
   background-image: linear-gradient(to top, #f0e68c, #e9cd7c, #dfb56f, #d29e65, #c4885c);
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
 
 .navbar {
   height: 100%;
-  display: flex;
   width: min(1200px, 100%);
-  margin: 0 auto;
-  justify-content: space-between;
-  align-items: center;
+  margin: 0;
   flex-wrap: wrap;
   position: relative;
-  padding: 0 var(--padding_left_right);
+  padding: 5px;
   font-family: market deco;
-  font-size: 1.4em;
 }
 
 .menu-hamburguesa {
@@ -55,7 +54,7 @@ ol, ul {
 
 .ul-links {
   width: 100%;
-  background-color: var(--color_primario_suave);
+  background-color: rgba(0, 0, 0, 0.9);
   position: absolute;
   top: var(--altura_header);
   left: 0;
@@ -65,15 +64,25 @@ ol, ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 1.5rem;
   transition: all 0.3s;
   font-family: market deco;
   z-index: 1;
-  font-size: 30px;
+  font-size: 1.5em;
+  padding: 5px;
 }
 
 .link {
-  color: var(--color_negro);
+  color: white;
+  opacity: 1;
+}
+
+.list-icon {
+  float: inline-end;
+  padding: 5px;
+  margin: 1em;
+  border: 2px var(--color_negro) solid;
+  border-radius: 3em;
 }
 
 ::-moz-selection {
@@ -134,10 +143,10 @@ ol, ul {
   color: white;
   text-align: center;
   align-items: center;
-  margin: 0.5%;
-  padding: 10px 10px;
   height: auto;
   font-size: 1em;
+  padding: 30px;
+  margin: 1em auto;
 }
 
 .container h2, h3, h4, h5, h6 {
@@ -151,10 +160,10 @@ ol, ul {
   background-color: var(--color_primario_suave);
   height: auto;
   font-family: alido;
-  padding: 10px 10px;
+  padding: 20px;
   text-align: center;
   justify-content: center;
-  margin: auto;
+  margin: 0.5em auto;
   font-size: 1.5em;
   border-radius: 0.5em;
 }
@@ -167,13 +176,12 @@ ol, ul {
 
 .container-redes {
   background-color: var(--color_primario);
-  margin: 0.5% auto;
+  margin: 1em auto;
   height: auto;
   justify-content: center;
   inline-size: 80%;
   text-align: center;
-  padding: 30px 30px;
-  font-size: 5em;
+  padding: 20px;
   color: white;
   border-radius: 3em;
 }
@@ -187,18 +195,17 @@ ol, ul {
   inline-size: 80%;
   display: flex;
   justify-content: center;
-  margin: 0.5% auto;
+  margin: 1em auto;
   height: auto;
-  padding: 20px 20px;
+  padding: 20px;
   text-align: center;
-  flex-direction: column;
   font-size: 1.4em;
-  border-radius: 0.3em;
+  border-radius: 3em;
 }
 
 .redes-titulos {
   font-family: market deco;
-  font-size: 22px;
+  font-size: 2.7em;
 }
 
 .redes-a {
@@ -207,8 +214,8 @@ ol, ul {
 }
 
 .icon-insta {
-  color: white;
-  font-size: 26px;
+  color: var(--color_negro);
+  font-size: 30px;
   display: inline-block;
   margin: 0 10px;
   transition: 0.5s;
@@ -231,14 +238,18 @@ ol, ul {
 .info-locales {
   text-align: center;
   background-color: var(--color_primario);
+  -webkit-text-decoration: solid;
+          text-decoration: solid;
   color: white;
-  font-size: 1.3em;
   height: auto;
   font-family: alido;
   inline-size: 80%;
   display: flex;
   justify-content: center;
-  margin: auto;
+  margin: 0.3em auto;
+  font-size: 1.5em;
+  padding: 3px;
+  border-radius: 0.6em;
 }
 
 .titulos {
@@ -247,13 +258,14 @@ ol, ul {
   color: var(--color_negro);
   background-color: white;
   height: auto;
-  font-size: 1.4em;
   font-family: market deco;
-  margin: auto;
-  padding: 1%;
-  inline-size: 80%;
-  border-radius: 0.8em;
+  inline-size: 90%;
   border-color: #000;
+  margin: 1em auto;
+  font-size: 1.5em;
+  padding: 18px;
+  border-radius: 0.8em;
+  text-align: center;
 }
 
 .container-locpastas {
@@ -262,14 +274,15 @@ ol, ul {
   display: flex;
   justify-content: center;
   height: auto;
-  margin: auto;
+  margin: 1em auto;
   font-size: 1.5em;
-  padding: 1.2%;
+  padding: 20px;
   flex-direction: column;
   align-items: center;
   color: white;
   text-align: center;
   font-family: alido;
+  border-radius: 3em;
 }
 
 .titulo-locpastas {
@@ -280,29 +293,33 @@ ol, ul {
 .mapa-local {
   display: flex;
   justify-content: center;
-  margin: 0.5%;
+  margin: 1em;
   align-items: center;
 }
 
 .notas-link {
   display: flex;
   align-items: center;
-  margin: 0.5%;
   justify-self: center;
+  margin: 1em;
+  padding: 15px;
+  background-color: rgb(196, 108, 45);
 }
 
 .carta-local {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0.5%;
+  margin: auto;
+  padding: 15px;
+  border-radius: 3em;
 }
 
 .video {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0.5%;
+  margin: 1em;
 }
 
 .footer {
@@ -362,23 +379,37 @@ ol, ul {
   }
 }
 @media (min-width: 728px) {
+  .header {
+    height: 10em;
+  }
   .label-hamburguesa {
     display: none;
+  }
+  .navbar img {
+    height: 20%;
+    width: 40%;
+    float: inline-start;
   }
   .ul-links {
     position: static;
     width: auto;
     height: auto;
     flex-direction: row;
-    gap: 2rem;
+    gap: 1rem;
+    color: var(--color_negro);
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 3em;
+    padding: 5px;
+    text-align: center;
+    margin: 2em;
   }
   .link {
     font-size: 1.2rem;
     transition: all 0.3s;
-    padding: 0.2rem 0.7rem;
+    padding: 10px;
   }
   .link:hover {
-    background-color: white;
+    background-color: var(--color_primario_suave);
   }
   .galeria {
     grid-template-columns: repeat(3, 1fr);
