--- a/pages/estilos.css
+++ b/pages/estilos.css
@@ -2,7 +2,7 @@
   --color_primario: #80461B;
   --color_primario_suave: rgba(183, 65, 14, 0.5);
   --color_negro: black;
-  --altura_header: 13em;
+  --altura_header: 12em;
   --padding_left_right: 1.2rem;
   --ancho_maximo: 1200px;
 }
@@ -56,7 +56,7 @@ ol, ul {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.9);
   position: absolute;
-  top: var(--altura_header);
+  top: 100%;
   left: 0;
   height: 0;
   overflow: hidden;
@@ -67,9 +67,8 @@ ol, ul {
   gap: 1.5rem;
   transition: all 0.3s;
   font-family: market deco;
-  z-index: 1;
   font-size: 1.5em;
-  padding: 5px;
+  z-index: 1;
 }
 
 .link {
@@ -145,8 +144,8 @@ ol, ul {
   align-items: center;
   height: auto;
   font-size: 1em;
-  padding: 30px;
-  margin: 1em auto;
+  padding: 1em;
+  margin: auto;
 }
 
 .container h2, h3, h4, h5, h6 {
@@ -159,7 +158,7 @@ ol, ul {
   color: white;
   background-color: var(--color_primario_suave);
   height: auto;
-  font-family: alido;
+  font-family: market deco;
   padding: 20px;
   text-align: center;
   justify-content: center;
@@ -258,7 +257,7 @@ ol, ul {
   color: var(--color_negro);
   background-color: white;
   height: auto;
-  font-family: market deco;
+  font-family: alido;
   inline-size: 90%;
   border-color: #000;
   margin: 1em auto;
@@ -288,6 +287,7 @@ ol, ul {
 .titulo-locpastas {
   color: var(--color_negro);
   text-align: center;
+  justify-content: center;
 }
 
 .mapa-local {
@@ -373,12 +373,23 @@ ol, ul {
     grid-template-columns: repeat(1, 1fr);
   }
 }
-@media (min-width: 520px) {
+@media (min-width: 500px) {
   .galeria {
     grid-template-columns: repeat(2, 1fr);
   }
+  .header {
+    height: 16em;
+  }
 }
-@media (min-width: 728px) {
+@media (min-width: 680px) {
+  .header {
+    height: 19em;
+  }
+}
+@media (min-width: 900px) {
+  .label-hamburguesa {
+    display: none;
+  }
   .header {
     height: 10em;
   }
@@ -399,7 +410,6 @@ ol, ul {
     color: var(--color_negro);
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 3em;
-    padding: 5px;
     text-align: center;
     margin: 2em;
   }
