--- a/pages/estilos.css
+++ b/pages/estilos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --color_primario: #80461B;
   --color_primario_suave: rgba(183, 65, 14, 0.5);
@@ -14,7 +15,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: var(--color_negro);
 }
 
 a {
@@ -28,7 +29,7 @@ ol, ul {
 
 .header {
   height: var(--altura_header);
-  background-image: linear-gradient(to top, #f0e68c, #e9cd7c, #dfb56f, #d29e65, #c4885c);
+  background-color: rgba(240, 230, 140, 0.848);
   display: flex;
   justify-content: end;
   align-items: center;
@@ -94,20 +95,67 @@ ol, ul {
   color: black;
 }
 
-/*galeria del index*/
-.imagen img {
+/* Contenedor principal del carrusel */
+.carousel {
+  position: relative;
   width: 100%;
-  padding: 1rem;
+  max-width: 600px;
+  margin: auto;
+  overflow: hidden;
 }
 
-.galeria {
-  width: 100%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-  row-gap: 1rem;
+/* Contenedor interno del carrusel que contiene las imágenes */
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 500%;
+}
+
+/* Estilo de las imágenes dentro del carrusel */
+.carousel-inner img {
+  width: 20%;
+}
+
+/* Ocultar los botones de radio */
+input[type=radio] {
+  display: none;
+}
+
+/* Contenedor de los indicadores del carrusel */
+.carousel-indicators {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+/* Estilo de los indicadores del carrusel */
+.carousel-indicators label {
+  cursor: pointer;
+  padding: 5px;
+  margin: 5px;
+  background: #ddd;
+  border-radius: 50%;
+}
+
+/* Transformaciones del carrusel según el botón de radio seleccionado */
+#carousel-1:checked ~ .carousel-inner {
+  transform: translateX(0%);
+}
+
+#carousel-2:checked ~ .carousel-inner {
+  transform: translateX(-20%);
+}
+
+#carousel-3:checked ~ .carousel-inner {
+  transform: translateX(-40%);
+}
+
+#carousel-4:checked ~ .carousel-inner {
+  transform: translateX(-60%);
+}
+
+#carousel-5:checked ~ .carousel-inner {
+  transform: translateX(-80%);
 }
 
 .subir {
@@ -158,7 +206,7 @@ ol, ul {
   color: white;
   background-color: var(--color_primario_suave);
   height: auto;
-  font-family: market deco;
+  font-family: alido;
   padding: 20px;
   text-align: center;
   justify-content: center;
@@ -190,7 +238,7 @@ ol, ul {
 }
 
 .redes-pastas {
-  background-color: var(--color_primario);
+  background-image: radial-gradient(circle, #c9b145, #bfa240, #b5933b, #aa8537, #9e7733, #956d2f, #8c632a, #825926, #795120, #70481a, #684014, #5f380e);
   inline-size: 80%;
   display: flex;
   justify-content: center;
@@ -203,7 +251,7 @@ ol, ul {
 }
 
 .redes-titulos {
-  font-family: market deco;
+  font-family: alido;
   font-size: 2.7em;
 }
 
@@ -269,7 +317,7 @@ ol, ul {
 
 .container-locpastas {
   background-color: var(--color_primario);
-  inline-size: 75%;
+  inline-size: 85%;
   display: flex;
   justify-content: center;
   height: auto;
@@ -325,7 +373,7 @@ ol, ul {
 .footer {
   position: relative;
   width: 100%;
-  background-image: linear-gradient(to bottom, #f0e68c, #e9cd7c, #dfb56f, #d29e65, #c4885c);
+  background-color: rgba(240, 230, 140, 0.848);
   height: auto;
   padding: 20px 50px;
   display: flex;
@@ -368,15 +416,7 @@ ol, ul {
   font-size: 20px;
 }
 
-@media (min-width: 100px) {
-  .galeria {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
 @media (min-width: 500px) {
-  .galeria {
-    grid-template-columns: repeat(2, 1fr);
-  }
   .header {
     height: 16em;
   }
@@ -420,9 +460,6 @@ ol, ul {
   }
   .link:hover {
     background-color: var(--color_primario_suave);
-  }
-  .galeria {
-    grid-template-columns: repeat(3, 1fr);
   }
   .notas-link {
     width: 800px;
