--- a/pages/estilos.scss
+++ b/pages/estilos.scss
@@ -11,9 +11,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    background-color: var(--color_negro);
-}
 a {
     text-decoration: none;
 }
@@ -86,14 +83,14 @@ ol,ul {
     overflow: hidden;
 }
 
-/* Contenedor interno del carrusel que contiene las imágenes */
+/* Contenedor del carrusel que tiene las imágenes */
 .carousel-inner {
     display: flex;
     transition: transform 0.5s ease-in-out;
     width: 500%;
 }
 
-/* Estilo de las imágenes dentro del carrusel */
+/* Estilo de las imágenes*/
 .carousel-inner img {
     width: 20%;
 }
@@ -113,9 +110,9 @@ input[type="radio"] {
 /* Estilo de los indicadores del carrusel */
 .carousel-indicators label {
     cursor: pointer;
-    padding: 5px;
-    margin: 5px;
-    background: #ddd;
+    padding: 7px;
+    margin: 7px;
+    background: var(--color_primario_suave);
     border-radius: 50%;
 }
 
@@ -399,6 +396,13 @@ border: 2px solid var(--color_negro);
         height: 20%;
         width: 40%;
         float: inline-start;
+    }
+    .body{
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100vh;
+            margin: 0;
     }
     .ul-links{
         position:static;
